fix: change like button hover on mobile

--- a/blocks/element/__like-button/element__like-button.css
+++ b/blocks/element/__like-button/element__like-button.css
@@ -12,3 +12,8 @@
 .element__like-button:hover{
   opacity: 50%;
 }
+@media screen and (max-width: 767px) {
+  .element__like-button:hover{
+    opacity: 100%;
+  }
+}
